--- a/upcomming-match.html
+++ b/upcomming-match.html
@@ -40,7 +40,7 @@
 
     <div class="container">
         <div class="artical">
-            <div class="artical-button-section-2">
+            <div class="artical-button-section">
                 <a href="" class="active-button">Upcomming Match</a>
                 <a href="https://www.facebook.com/">All group</a>
                 <a href="">Blog</a>
